# MarvisBridge

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: bridge-ci.yml  build.yml  security-scan.yml
archive/: onboarding_qclaw_status.md
bridge/: poller.sh  workbuddy_consumer.sh
bridge/results/: 20260611-007.md
claw/dead_letter/: 2026-06-11-040_expired_1781151927.json  2026-06-11-040_expired_1781158295.json  2026-06-11-041_expired_1781158295.json  2026-06-11-1000_expired_1781152048.json  2026-06-13-1100_expired_1781340868.json  20260610-040_expired_1781151928.json  20260610-041.json  20260611-041_expired_1781152048.json  task_2026-06-11-0925_expired_1781152048.json  task_2026-06-11-1300_expired_1781158295.json
claw/done/: 2026-06-11-040.json  2026-06-11-041.json  2026-06-11-1000.json  2026-06-11-earnings-am.json  2026-06-12-040.json  2026-06-12-041.json  2026-06-12-042.json  2026-06-12-1000.json  2026-06-12-1100.json  2026-06-19-1300.json  20260610-001.json  20260610-004.json  20260610-005.json  20260610-009.json  20260610-010.json  20260610-011.json  20260610-012.json  20260610-013.json  20260610-033.json  20260610-034.json  20260610-035.json  20260610-036.json  20260610-037.json  (+15 more)
docs/: collaboration-protocol.md
feishu-inbound/: config.json  processed_ids.json
scripts/: bridge_monitor.sh  bridge_monitor_tools.py  bridge_notify.py  bridge_tools.py  build_stock_names.py  check-commit-msg.py  dead_letter_cleanup.sh  extract_ocr_text.py  feishu_qa.py  feishu_qa_bot.py  feishu_qa_bot_watchdog.sh  file_watcher.sh  gen_manifest.py  health_check.sh  log_rotate.sh  status_aggregator.py  stock_names.json  task_sync.sh  task_validator.py  template.json  workbuddy_consumer.sh  workbuddy_poller.sh
shared/: ROADMAP.md  STATUS.md
status/: .marvis_summary  .poller_state  .trigger_pending  agents.json  bridge.json  circuit_breaker.json  dashboard.json  heartbeat  optimization_plan.md  trigger
stock-insight/: PROJECT.md
tests/: test_bridge_monitor_tools.py
(+77 files in other folders)
