[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "marvis-bridge"
version = "3.4.0"
description = "Marvis-WorkBuddy 桥接调度器 — 任务扫描/执行/监控守护进程"
requires-python = ">=3.11"
dependencies = []  # 纯标准库，无第三方依赖

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.5",
    "mypy>=1.0",
    "bandit>=1.7",
    "pre-commit>=3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
check_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
no_implicit_optional = true

[tool.bandit]
exclude_dirs = ["tests"]

[tool.coverage.run]
source = ["scripts"]

[tool.coverage.report]
fail_under = 50
